kubernetes/apps/base/pager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pager
  namespace: pager
spec:
  selector:
    app: pager
  ports:
    - port: 80
      targetPort: 4500
